--- a/pathfind/CMakeLists.txt
+++ b/pathfind/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 project(pathfind)
 
-find_package(cxxopts)
-
 file(GLOB SOURCES src/*.cpp)
+
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE include)
-target_link_libraries(${PROJECT_NAME} PRIVATE cxxopts::cxxopts c++fs)
+target_link_libraries(${PROJECT_NAME} PRIVATE stdc++fs)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
