can print a map

--- a/pathfind/CMakeLists.txt
+++ b/pathfind/CMakeLists.txt
@@ -1,9 +1,18 @@
 cmake_minimum_required(VERSION 3.10)
 project(pathfind)
 
+include(${CMAKE_CURRENT_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
+
 file(GLOB SOURCES src/*.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
-target_include_directories(${PROJECT_NAME} PRIVATE include)
-target_link_libraries(${PROJECT_NAME} PRIVATE stdc++fs)
+target_include_directories(${PROJECT_NAME} 
+    PRIVATE include ${CONAN_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} PRIVATE stdc++fs ${CONAN_LIBS})
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
+
+install(TARGETS ${PROJECT_NAME}
+    RUNTIME DESTINATION bin
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib)
